# Utility-Drip-Contracts

./: .gitignore  ARCHITECTURE.md  CI-CD.md  CODE_CHANGES.md  CONTRIBUTING.md  README.md  sanity_check.sh  tarpaulin.toml  validate-ci.ps1  validate-ci.sh
.github/workflows/: ci.yml  test-coverage.yml  test.yml
contracts/price_oracle/: Cargo.toml
contracts/price_oracle/src/: lib.rs  test.rs
contracts/utility_contracts/: Cargo.toml  errors.txt  test_out.txt
contracts/utility_contracts/fuzz/: Cargo.toml
contracts/utility_contracts/fuzz/fuzz_targets/: arithmetic_overflow_fuzz.rs  debt_calculation_fuzz.rs  extreme_usage_fuzz.rs  precision_factor_fuzz.rs  velocity_limit_fuzz.rs
contracts/utility_contracts/src/: ERRORS.md  basket_stream.rs  debt_fuzz_tests.rs  fuzz_tests.rs  gas_estimator.rs  grant_stream_listener.rs  insurance_pool.rs  insurance_pool_test.rs  lib.rs  lib_original.rs  oracle_flow.rs  sbt_minter.rs  test.rs  (+3 more)
docs/: BLOCK_EXPLORER_GUIDE.md  ESP32_SECURE_KEY_STORAGE.md  STREAM_INSURANCE_POOL_GOVERNANCE.md  UTILITY_ERRORS.md
examples/: insurance_pool_demo.rs
meter-simulator/: .env.example  README.md  TYPESCRIPT_BINDINGS.md  package.json  test-validation.js
meter-simulator/examples/: basic-usage.js
meter-simulator/scripts/: setup.ps1  setup.sh
meter-simulator/src/: config.js  contract-interface.js  index.js  meter-device.js  mqtt-publisher.js  ttl-monitor.js  typed-contract-interface.ts  types.ts
meter-simulator/tests/: meter-device.test.js
scripts/: DEPLOY_README.md  deploy.sh
usage-dashboard/: README.md  package.json  tailwind.config.js
(+53 files in other folders)
